[gd_scene load_steps=16 format=2]

[ext_resource path="res://resourses/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/quiz/secondary/testing/testing.gd" type="Script" id=2]
[ext_resource path="res://resourses/themes/default/styles/button/button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://resourses/themes/default/styles/button/button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://resourses/themes/default/styles/button/button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://resourses/themes/default/styles/win_default.tres" type="StyleBox" id=6]
[ext_resource path="res://resourses/themes/default/styles/win_header.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.290196, 0.290196, 0.290196, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.172549, 0.172549, 0.172549, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hide"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "show"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}

[node name="Testing" type="PanelContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
rect_min_size = Vector2( 1280, 720 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 2 )

[node name="VB" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/separation = 10

[node name="HeaderPanel" type="PanelContainer" parent="VB"]
margin_right = 1280.0
margin_bottom = 44.0
custom_styles/panel = ExtResource( 7 )

[node name="Header" type="Label" parent="VB/HeaderPanel"]
margin_top = 5.0
margin_right = 1280.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="TextureRect" type="TextureRect" parent="VB"]
margin_top = 54.0
margin_right = 1280.0
margin_bottom = 561.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Dot" type="ColorRect" parent="VB/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -2.5
margin_right = 2.5
margin_bottom = 2.5
rect_min_size = Vector2( 5, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Sh" type="ColorRect" parent="VB/TextureRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextEdit" type="TextEdit" parent="VB"]
margin_left = 340.0
margin_top = 571.0
margin_right = 940.0
margin_bottom = 671.0
rect_min_size = Vector2( 600, 100 )
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.760784, 0.760784, 0.760784, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
wrap_enabled = true

[node name="Buttons" type="HBoxContainer" parent="VB"]
margin_top = 681.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Next" type="Button" parent="VB/Buttons"]
margin_right = 1280.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Далее"

[node name="Anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/hide = SubResource( 7 )
anims/show = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
bus = "Sound"

[node name="BG" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="VB/Buttons/Next" to="." method="_on_Next_pressed"]
[connection signal="animation_finished" from="Anim" to="." method="_on_Anim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
